@@ -30,9 +30,9 @@ foreach $f (@database_features) {
 &ui_print_unbuffered_header(&domain_in($d), $text{'dbname_title'}, "");
 
 # Run the before command
-&set_domain_envs($d, "DBNAME_DOMAIN");
+&set_domain_envs($oldd, "DBNAME_DOMAIN", $d);
 $merr = &making_changes();
-&reset_domain_envs($d);
+&reset_domain_envs($oldd);
 &error(&text('setup_emaking', "<tt>$merr</tt>")) if (defined($merr));
 
 # Call the database change functions
