@@ -876,3 +876,4 @@ Added a script to change the Virtualmin license in all needed files on an alread
 Added the Magento eCommerce package to Virtualmin's script installers, beta version 0.9.17740.
 Added the --name-only flag to all list-* command-line API programs, to output just object names for easier use in scripts.
 Leftover /tmp/clamav-* files older than 1 day are now periodically deleted by Virtualmin.
+The pre-change script now has access to the settings that will be applied in $VIRTUALSERVER_NEWSERVER_* variables, while the $VIRTUALSERVER_* variables always contain the domain's settings before the change is made.
